# SyatiSetup

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: go.yml  rust.yml
src/: funcs.rs  main.rs
unrar/: go.mod  go.sum  main.go
