[package]
name = "syatisetup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
indicatif = "0.16.2"
thread-control = { git = "https://github.com/DenisKolodin/thread-control" }
zip-extract = "0.1.1"